--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -1,39 +1,14 @@
-<nav class="navbar navbar-expand-lg content-main-nav">
-  <div class="collapse navbar-collapse d-flex justify-content-center">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">
-          get support <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">sla</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">certifications</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">status</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">knowledge base</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
 <nav class="navbar navbar-expand-sm content-secondary-nav justify-content-center">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">
-          lesson 1 <span class="sr-only">(current)</span>
+        <a class="nav-link" href="#">Option 1 <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">lesson 2</a>
+        <a class="nav-link" href="#">Option 2</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">lesson 3</a>
+        <a class="nav-link" href="#">Option 3</a>
       </li>
     </ul>
 </nav>
@@ -41,38 +16,130 @@
 <div class="content-card card-section">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-4 offset-lg-1 col-sm-12">
-        <h1>Lesson 1</h1>
-        <h2>Our Infrastructure as a Service (IaaS) is purpose built for:</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolorez magna
-          aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-          ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-          consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit.
-        </p>
-      </div>
-      <div class="col-lg-6 col-sm-12 lesson-video">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe src="https://www.youtube.com/embed/Oe3FG4EOgyU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-11 offset-lg-1 col-sm-12 next-button">
-        <a href="#">Next lesson &#x227B;</a>
-      </div>
-    </div>
-    <div class="row special-offer-row">
-      <div class="col-lg-11 offset-lg-1 col-sm-12">
-        <a class="btn special-offer" href="#" role="button">Special offers</a>
-        <a class="btn special-offer" href="#" role="button">Special offers</a>
-      </div>
-    </div>
-    <div class="row special-offer-row">
-      <div class="col-lg-11 offset-lg-1 col-sm-12">
-        <a class="btn special-offer" href="#" role="button">Special offers</a>
-        <a class="btn special-offer" href="#" role="button">Special offers</a>
-      </div>
-    </div>
+       <div class="col-lg-11 offset-lg-1 col-sm-12 compute">
+         <h3>Compute</h3>
+       </div>
+       <div class="col-lg-11 offset-lg-1 col-sm-12 compute-price-row with-line">
+         <div class="row">
+
+           <div class="col-lg-2 col-sm-12 compute-price-col">
+             <p class="compute-price-p">
+               <span class="whitespace-group">
+                   <span class="dollar-sign">$</span>
+                   <span class="cost-amount">108</span>
+               </span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="plan-specs">2 VCPU/8 GB RAM</p>
+           </div>
+
+           <div class="col-lg-2 col-sm-12 compute-price-col">
+             <p class="compute-price-p">
+               <span class="whitespace-group">
+                 <span class="dollar-sign">$</span>
+                 <span class="cost-amount">144</span>
+               </span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="plan-specs">2 VCPU/8 GB RAM</p>
+           </div>
+
+           <div class="col-lg-2 col-sm-12 compute-price-col with-line">
+             <p class="compute-price-p">
+               <span class="whitespace-group">
+                 <span class="dollar-sign">$</span>
+                 <span class="cost-amount">216</span>
+               </span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="plan-specs">4 VCPU/16 GB RAM</p>
+           </div>
+
+           <div class="col-lg-2 col-sm-12 compute-price-col with-line">
+             <p class="compute-price-p">
+               <span class="whitespace-group">
+                 <span class="dollar-sign">$</span>
+                 <span class="cost-amount">360</span>
+               </span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="plan-specs">32 VCPU/4 GB RAM</p>
+           </div>
+
+           <div class="col-lg-2 col-sm-12 compute-price-col">
+             <p class="compute-price-p">
+               <span class="whitespace-group">
+                 <span class="dollar-sign">$</span>
+                 <span class="cost-amount">684</span>
+               </span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="plan-specs">8 VCPU/60GB RAM</p>
+           </div>
+
+         </div>
+       </div>
+       <div class="col-lg-4 offset-lg-7 col-sm-12 other-compute with-line">
+         <p>
+           Other compute offerings are available.
+           <a href="#">Contact us</a>
+           for details.
+         </p>
+       </div>
+     </div>
+
+     <div class="row storage">
+       <div class="col-lg-11 offset-lg-1 col-sm-12">
+         <h3>Storage</h3>
+       </div>
+
+       <div class="col-lg-7 offset-lg-1 col-sm-12">
+         <h6>high performance block storage-highly available SSD</h6>
+         <div class="row block-storage">
+           <div class="col-lg-4 col-sm-12 storage-option">
+             <p class="storage-amount">
+               <span class="dollar-sign-storage">$</span>
+               <span class="cost-storage">0.25 CAD/GB</span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="IOPS-GB">1 IOPS/GB*</p>
+           </div>
+           <div class="col-lg-4 col-sm-12 storage-option">
+             <p class="storage-amount">
+               <span class="dollar-sign-storage">$</span>
+               <span class="cost-storage">0.50 CAD/GB</span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="IOPS-GB">5 IOPS/GB*</p>
+           </div>
+           <div class="col-lg-4 col-sm-12 storage-option">
+             <p class="storage-amount">
+               <span class="dollar-sign-storage">$</span>
+               <span class="cost-storage">0.75 CAD/GB</span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+             <p class="IOPS-GB">10 IOPS/GB*</p>
+           </div>
+         </div>
+       </div>
+
+       <div class="col-lg-3 col-sm-12 col-storage-3">
+         <h6>object storage—3 replicas</h6>
+         <div class="row storage-3">
+           <div class="col-lg-12 col-sm-12 storage-option storage-3-option">
+             <p class="storage-amount">
+               <span class="dollar-sign-storage">$</span>
+               <span class="cost-storage">0.05 CAD/GB</span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+           </div>
+         </div>
+       </div>
+
+       <div class="col-lg-4 offset-lg-7 col-sm-12 additional-performance">
+         <p>*Minimum guaranteed IOPS. Additional performance tiers available,
+           <a href="#">contact us</a> for details.</p>
+       </div>
+     </div>
   </div>
 </div>
