--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -1,131 +1,4 @@
 <div class="services-card pricing">
- <div class="row">
-    <div class="col-lg-11 offset-lg-1 col-sm-12 compute">
-      <h3>Compute</h3>
-    </div>
-    <div class="col-lg-11 offset-lg-1 col-sm-12 compute-price-row with-line">
-      <div class="row">
-
-        <div class="col-lg-2 col-sm-12 compute-price-col">
-          <p class="compute-price-p">
-            <span class="whitespace-group">
-                <span class="dollar-sign">$</span>
-                <span class="cost-amount">108</span>
-            </span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="plan-specs">2 VCPU / 8 GB RAM</p>
-        </div>
-
-        <div class="col-lg-2 col-sm-12 compute-price-col">
-          <p class="compute-price-p">
-            <span class="whitespace-group">
-              <span class="dollar-sign">$</span>
-              <span class="cost-amount">144</span>
-            </span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="plan-specs">2 VCPU / 8 GB RAM</p>
-        </div>
-
-        <div class="col-lg-2 col-sm-12 compute-price-col with-line">
-          <p class="compute-price-p">
-            <span class="whitespace-group">
-              <span class="dollar-sign">$</span>
-              <span class="cost-amount">216</span>
-            </span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="plan-specs">4 VCPU / 16 GB RAM</p>
-        </div>
-
-        <div class="col-lg-2 col-sm-12 compute-price-col with-line">
-          <p class="compute-price-p">
-            <span class="whitespace-group">
-              <span class="dollar-sign">$</span>
-              <span class="cost-amount">360</span>
-            </span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="plan-specs">32 VCPU / 4 GB RAM</p>
-        </div>
-
-        <div class="col-lg-2 col-sm-12 compute-price-col">
-          <p class="compute-price-p">
-            <span class="whitespace-group">
-              <span class="dollar-sign">$</span>
-              <span class="cost-amount">684</span>
-            </span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="plan-specs">8 VCPU / 60GB RAM</p>
-        </div>
-
-      </div>
-    </div>
-    <div class="col-lg-4 offset-lg-7 col-sm-12 other-compute with-line">
-      <p>
-        Other compute offerings are available.
-        <a href="#">Contact us</a>
-        for details.
-      </p>
-    </div>
-  </div>
-
-  <div class="row storage">
-    <div class="col-lg-11 offset-lg-1 col-sm-12">
-      <h3>Storage</h3>
-    </div>
-
-    <div class="col-lg-7 offset-lg-1 col-sm-12">
-      <h6>high performance block storage-highly available SSD</h6>
-      <div class="row block-storage">
-        <div class="col-lg-4 col-sm-12 storage-option">
-          <p class="storage-amount">
-            <span class="dollar-sign-storage">$</span>
-            <span class="cost-storage">0.25 CAD / GB</span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="IOPS-GB">1 IOPS/GB*</p>
-        </div>
-        <div class="col-lg-4 col-sm-12 storage-option">
-          <p class="storage-amount">
-            <span class="dollar-sign-storage">$</span>
-            <span class="cost-storage">0.50 CAD / GB</span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="IOPS-GB">5 IOPS/GB*</p>
-        </div>
-        <div class="col-lg-4 col-sm-12 storage-option">
-          <p class="storage-amount">
-            <span class="dollar-sign-storage">$</span>
-            <span class="cost-storage">0.75 CAD / GB</span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="IOPS-GB">10 IOPS/GB*</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-3 col-sm-12">
-      <h6>object storage—3 replicas</h6>
-      <div class="row storage-3">
-        <div class="col-lg-12 col-sm-12 storage-option storage-3-option">
-          <p class="storage-amount">
-            <span class="dollar-sign-storage">$</span>
-            <span class="cost-storage">0.05 CAD / GB</span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-4 offset-lg-7 col-sm-12 additional-performance">
-      <p>*Minimum guaranteed IOPS. Additional performance tiers available,
-        <a href="#">contact us</a> for details.</p>
-    </div>
-  </div>
-
   <div class="row">
     <div class="col-lg-5 offset-lg-1 col-sm-12 networking">
       <h3>Networing</h3>
@@ -134,7 +7,7 @@
         <tbody>
           <tr>
             <td>PUBLIC IPS</td>
-            <td>$0.50 CAD / GBMonthly</td>
+            <td>$0.50 CAD/GB Monthly</td>
           </tr>
           <tr>
             <td>INTERNAL DATA TRANSFER</td>
@@ -146,15 +19,15 @@
           </tr>
           <tr>
             <td>OUTBOUND DATA TRANSFER</td>
-            <td>$0.10 CAD / GB</td>
+            <td>$0.10 CAD/GB</td>
           </tr>
           <tr>
             <td>INTER-REGION DATA TRANSFER</td>
-            <td>$0.02 CAD / GB</td>
+            <td>$0.02 CAD/GB</td>
           </tr>
           <tr>
             <td>DIRECT CONNECT DATA TRANSFER</td>
-            <td>$0.02 CAD / GB</td>
+            <td>$0.02 CAD/GB</td>
           </tr>
           <tr>
             <td>MULTI-TIER VPC</td>
@@ -207,14 +80,14 @@
     </div>
   </div>
 
-  <div class="col-lg-6 offset-lg-1 col-sm-12 contact-form">
+  <div class="col-lg-12 col-sm-12 contact-form">
     <h5> Call us at 1-888-796-8364 to speak to a specialist today or fill out the form below: </h5>
   </div>
 
   <div class="container-fluid contact-form">
     <form>
       <div class="row">
-        <div class="col-lg-3 offset-lg-1 col-sm-12 small-box-col-1">
+        <div class="col-lg-3 offset-lg-3 col-sm-12 small-box-col-1">
           <div class="form-group">
             <input type="text" class="form-control form-control-lg" id="Form-First-Name" placeholder="First name">
           </div>
@@ -226,7 +99,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 offset-lg-1 col-sm-12 small-box-col-1">
+        <div class="col-lg-3 offset-lg-3 col-sm-12 small-box-col-1">
           <div class="form-group">
             <input type="text" class="form-control form-control-lg" id="Form-Company-Name" placeholder="Company Name">
           </div>
@@ -245,83 +118,26 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-1 col-sm-12">
+        <div class="col-lg-6 offset-lg-3 col-sm-12">
           <div class="form-group">
             <input type="tel" class="form-control form-control-lg" id="Form-Phone-Number" placeholder="Phone Number">
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-1 col-sm-12">
+        <div class="col-lg-6 offset-lg-3 col-sm-12">
           <div class="form-group">
             <input type="email" class="form-control form-control-lg" id="Form-Email" placeholder="E-mail">
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-1 col-sm-12">
+        <div class="col-lg-6 offset-lg-3 col-sm-12">
           <div class="form-group">
             <textarea class="form-control form-control-lg" id="Form-Requirements" rows="3" placeholder="What are your requirements or specific questions?"></textarea>
           </div>
         </div>
       </div>
     </form>
-  </div>
-
-  <div class="container-fluid services-list">
-    <div class="row">
-      <div class="col-lg-1 offset-lg-1 col-sm-12">
-        <img class="img" src="{{ "images/multi-tiered-networking-white.png" | absURL }}">
-      </div>
-      <div class="col-lg-4 col-sm-12">
-        <h3>Service</h3>
-        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
-          nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
-      </div>
-      <div class="col-lg-1 col-sm-12">
-        <img class="img" src="{{ "images/performant-multi-tenant-storage-white.png" | absURL }}">
-      </div>
-      <div class="col-lg-4 col-sm-12">
-        <h3>Service</h3>
-        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
-          nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-1 offset-lg-1 col-sm-12">
-        <img class="img" src="{{ "images/bare-metal-servers-white.png" | absURL }}">
-      </div>
-      <div class="col-lg-4 col-sm-12">
-        <h3>Service</h3>
-        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
-          nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
-      </div>
-      <div class="col-lg-1 col-sm-12">
-        <img class="img" src="{{ "images/dedicated-infrastructure-white.png" | absURL }}">
-      </div>
-      <div class="col-lg-4 col-sm-12">
-        <h3>Service</h3>
-        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
-          nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-1 offset-lg-1 col-sm-12">
-        <img class="img" src="{{ "images/elastic-compute-white.png" | absURL }}">
-      </div>
-      <div class="col-lg-4 col-sm-12">
-        <h3>Service</h3>
-        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
-          nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
-      </div>
-      <div class="col-lg-1 col-sm-12">
-        <img class="img" src="{{ "images/integrated-devops-tooling-white.png" | absURL }}">
-      </div>
-      <div class="col-lg-4 col-sm-12">
-        <h3>Service</h3>
-        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
-          nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
-      </div>
-    </div>
   </div>
 </div>
