--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -76,12 +76,20 @@
       padding: 30px 15px 0 5px;
     }
 
+    h3 {
+      color: @global-official-red;
+    }
+
     p {
-      font-size: 17px;
+      font-size: 12px;
       color: @global-official-dark-grey;
       padding: 10px 20px 0 15px;
     }
-    .lesson-video {
+
+    a {
+      color: @global-official-red;
+    }
+/*    .lesson-video {
         padding-top: 55px;
     }
     .special-offer-row {
@@ -101,8 +109,8 @@
       padding: 10px 15px;
       margin: 7px 7px;
     }
+*/
   }
-
   /* MOBILE CONTENT-CARD*/
   @media screen and (max-width : 992px) {
 
@@ -123,6 +131,254 @@
         }
   }
 
+  /* COMPUTE */
+  .compute-price-row {
+    margin-top: 20px;
+    padding-left: 30px;
+
+    .compute-price-col {
+      border-right: 1px solid @global-official-red;
+
+      &:last-child {
+        border-right: none;
+      }
+
+      .compute-price-p {
+        padding-left: 0;
+        padding-right: 0;
+        margin-bottom: 0;
+      }
+
+      .whitespace-group {
+        white-space: nowrap;
+      }
+
+      .dollar-sign {
+        font-size: 36px;
+        line-height: 60px;
+        font-weight: lighter;
+
+        position: relative;
+        top: -12px;
+      }
+
+      .cost-amount {
+        font-size: 60px;
+        line-height: 60px;
+        font-weight: lighter;
+      }
+
+      .monthly-word {
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: lighter;
+      }
+
+      .plan-specs {
+        font-size: 14px;
+        position: relative;
+        top: 0;
+        margin-bottom: 0;
+      }
+    }
+  }
+  .other-compute {
+    font-size: 12px;
+    margin-top: 20px;
+    text-align: right;
+  }
+
+  /* MOBILE COMPUTE*/
+
+  @media screen and (max-width : 991px) {
+
+      .compute h3 {
+          margin-bottom: 40px;
+          margin-left: 10px;
+      }
+      .compute-price-row .compute-price-col {
+          margin-top: 25px;
+          margin-bottom: 25px;
+          border-right: none;
+      }
+      .other-compute {
+          text-align: left;
+          margin-left: 15px;
+      }
+
+  .with-line {
+      position: relative;
+
+      &:before {
+        content: '';
+        width: 30px;
+        height: 1px;
+        border-style: solid;
+        border-width: 1px;
+        border-color: @global-official-red;
+        background-color: @global-official-red;
+        opacity: 0.5;
+        border-radius: 1px;
+        position: absolute;
+        top: -25px;
+      }
+    }
+  }
+
+
+  /* STORAGE */
+  .storage {
+    h6 {
+      color: @global-official-dark-grey;
+      text-transform: uppercase;
+      font-size: 15px;
+      margin: 20px 0 20px 20px;
+      width: 100%;
+    }
+    .block-storage {
+      border-right: 1px solid @global-official-red;
+      border-top: 1px solid @global-official-red;
+      border-bottom: 1px solid @global-official-red;
+      margin-left: 5px;
+    }
+    .storage-3 {
+      border-top: 1px solid @global-official-red;
+      border-bottom: 1px solid @global-official-red;
+      margin-right: 30px;
+    }
+    .col-storage-3 {
+      padding-right: 0;
+    }
+    .dollar-sign-storage {
+      font-size: 18px;
+      font-weight: lighter;
+      line-height: 0;
+      position: relative;
+      vertical-align: baseline;
+      top: -10px;
+    }
+    .cost-storage {
+      font-size: 28px;
+      font-weight: lighter;
+      line-height: 0.8;
+    }
+    .monthly-word {
+          font-size: 12px;
+          font-weight: lighter;
+          line-height: 0;
+    }
+    .IOPS-GB {
+      font-size: 14px;
+      padding-left: 17px;
+      margin-bottom: 25px;
+    }
+    .storage-amount {
+      margin: 25px auto 0;
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .storage-option {
+      width: 100%;
+      height: 125px;
+      line-height: 20px;
+    }
+
+    .storage-option::after {
+      content: ' ';
+      background: @global-official-red;
+      width: 1px;
+      height: 50%;
+
+      position: absolute;
+      top: 25%;
+      right: 0;
+    }
+
+    .storage-option:last-child::after {
+      display: none;
+    }
+
+    .storage-3-option {
+        width:100%;
+        height:125px;
+    }
+
+    .additional-performance {
+      font-size: 12px;
+      margin-top: 20px;
+      padding: 0;
+    }
+  }
+
+
+  /* MOBILE STORAGE*/
+  @media screen and (max-width : 991px) {
+
+    .storage h6 {
+        color: @global-official-red;
+      }
+
+    .storage h3 {
+      margin-left: 10px;
+    }
+
+    .storage .block-storage {
+        border-right: 0 solid @global-official-red;
+        border-top: 0 solid @global-official-red;
+        border-bottom: 0 solid @global-official-red;
+        margin-left: 5px;
+    }
+
+    .storage-option::after {
+      display: none;
+
+    }
+    .storage .storage-3 {
+      border-top: 0 solid @global-official-red;
+      border-bottom: 0 solid @global-official-red;
+      margin-right: 0;
+      margin-left: 10px;
+    }
+      storage .with-line {
+        position: relative;
+
+        &:before {
+          content: '';
+          width: 30px;
+          height: 1px;
+          border-style: solid;
+          border-width: 1px;
+          border-color: @global-official-red;
+          background-color: @global-official-red;
+          opacity: 0.5;
+          border-radius: 1px;
+          position: absolute;
+          top: 0;
+        }
+      }
+
+       .storage .additional-performance {
+           margin-left: 40px;
+           margin-right: 30px;
+           position: relative;
+
+           &:before {
+             content: '';
+             width: 30px;
+             height: 1px;
+             border-style: solid;
+             border-width: 1px;
+             border-color: @global-official-red;
+             background-color: @global-official-red;
+             opacity: 0.5;
+             border-radius: 1px;
+             position: absolute;
+             top: -24px;
+       }
+   }
+
+  }
 
   .services-card {
     /* For browsers that do not support gradients */
@@ -458,9 +714,11 @@
       h5 {
         font-size: 28px;
         font-weight: lighter;
-        padding: 80px 0 20px;
+        padding: 150px 20px 20px;
         color: @global-absolute-white;
         text-transform: initial;
+        max-width: 50%;
+        margin: auto;
       }
       .form-control {
         border: none;
@@ -519,6 +777,10 @@
     /* MOBILE CONTACT FORM */
 
     @media screen and (max-width : 992px) {
+
+      .contact-form h5 {
+        max-width: 100%;
+      }
       .contact-form .small-box-col-1 {
         padding-right: 15px;
       }
@@ -559,6 +821,4 @@
           text-align: center;
       }
   }
-
-
 }
