Modified home page

--- a/themes/cca-general/assets/less/pages/home.less
+++ b/themes/cca-general/assets/less/pages/home.less
@@ -4,7 +4,7 @@
     background-color: @global-absolute-white;
     text-align: center;
     color: @global-official-red;
-    padding: 100px 0 0 0;
+    padding: 0 0 100px 0;
     position: relative;
 
     h3 {
