Typo fixed - seconday nav removed

--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -1,7 +1,7 @@
 <div class="services-card pricing">
   <div class="row">
     <div class="col-lg-5 offset-lg-1 col-sm-12 networking">
-      <h3>Networing</h3>
+      <h3>Networking</h3>
 
       <table class="table table-striped">
         <tbody>
