--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -7,7 +7,7 @@
         <tbody>
           <tr>
             <td>PUBLIC IPS</td>
-            <td>$0.50 CAD/GB Monthly</td>
+            <td>$5.00 CAD Monthly</td>
           </tr>
           <tr>
             <td>INTERNAL DATA TRANSFER</td>
