--- a/themes/cca-general/layouts/partials/header/intro-page.html
+++ b/themes/cca-general/layouts/partials/header/intro-page.html
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-lg-12 col-sm-12">
         <h1> {{ .Title }} </h1>
+        <h2> {{ .subtitle }} </h2>
       </div>
     </div>
   </div>
