unfinished update of info

--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -48,7 +48,7 @@
                </span>
                <span class="monthly-word"> Monthly</span>
              </p>
-             <p class="plan-specs">32 VCPU/4 GB RAM</p>
+             <p class="plan-specs">4 VCPU/32 GB RAM</p>
            </div>
 
            <div class="col-lg-2 col-sm-12 compute-price-col">
@@ -108,18 +108,32 @@
          </div>
        </div>
 
-       <div class="col-lg-3 col-sm-12 col-storage-3">
-         <h6>object storage—3 replicas</h6>
-         <div class="row storage-3">
-           <div class="col-lg-12 col-sm-12 storage-option storage-3-option">
-             <p class="storage-amount">
-               <span class="dollar-sign-storage">$</span>
-               <span class="cost-storage">0.05 CAD/GB</span>
-               <span class="monthly-word"> Monthly</span>
-             </p>
+       <div class="row storage">
+
+         <div class="col-lg-8 offset-lg-2 col-sm-12">
+           <h6>high performance block storage-highly available SSD</h6>
+           <h6>high performance block storage-highly available SSD</h6>
+
+           <div class="row block-storage storage-3">
+             <div class="col-lg-4 offset-lg-1 col-sm-12 storage-option">
+               <p class="storage-amount">
+                 <span class="dollar-sign-storage">$</span>
+                 <span class="cost-storage">0.25 CAD/GB</span>
+                 <span class="monthly-word"> Monthly</span>
+               </p>
+               <p class="IOPS-GB">1 IOPS/GB*</p>
+             </div>
+             <div class="col-lg-4 col-sm-12 storage-option">
+               <p class="storage-amount">
+                 <span class="dollar-sign-storage">$</span>
+                 <span class="cost-storage">0.50 CAD/GB</span>
+                 <span class="monthly-word"> Monthly</span>
+               </p>
+               <p class="IOPS-GB">5 IOPS/GB*</p>
+             </div>
            </div>
-         </div>
-       </div>
+        </div>
+      </div>
 
        <div class="col-lg-4 offset-lg-7 col-sm-12 additional-performance">
          <p>*Minimum guaranteed IOPS. Additional performance tiers available,
