--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -242,9 +242,7 @@
       margin-left: 5px;
     }
     .storage-3 {
-      border-top: 1px solid @global-official-red;
-      border-bottom: 1px solid @global-official-red;
-      margin-right: 30px;
+      border: 1px solid @global-official-red;
     }
     .col-storage-3 {
       padding-right: 0;
