--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -232,21 +232,18 @@
       color: @global-official-dark-grey;
       text-transform: uppercase;
       font-size: 15px;
-      margin: 20px 0 20px 20px;
-      width: 100%;
+      margin: 20px 70px 0 20px;
+      height:40px;
     }
     .block-storage {
-      border-right: 1px solid @global-official-red;
       border-top: 1px solid @global-official-red;
       border-bottom: 1px solid @global-official-red;
       margin-left: 5px;
     }
-    .storage-3 {
-      border: 1px solid @global-official-red;
+    .row .storage .storage-option .storage-3 {
+      max-width: 300px;
     }
-    .col-storage-3 {
-      padding-right: 0;
-    }
+
     .dollar-sign-storage {
       font-size: 18px;
       font-weight: lighter;
@@ -297,9 +294,8 @@
       display: none;
     }
 
-    .storage-3-option {
-        width:100%;
-        height:125px;
+    .storage-3 {
+      margin-right: 23%;
     }
 
     .additional-performance {
