--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -108,32 +108,30 @@
          </div>
        </div>
 
-       <div class="row storage">
-
-         <div class="col-lg-8 offset-lg-2 col-sm-12">
-           <h6>high performance block storage-highly available SSD</h6>
-           <h6>high performance block storage-highly available SSD</h6>
-
-           <div class="row block-storage storage-3">
-             <div class="col-lg-4 offset-lg-1 col-sm-12 storage-option">
-               <p class="storage-amount">
-                 <span class="dollar-sign-storage">$</span>
-                 <span class="cost-storage">0.25 CAD/GB</span>
-                 <span class="monthly-word"> Monthly</span>
-               </p>
-               <p class="IOPS-GB">1 IOPS/GB*</p>
-             </div>
-             <div class="col-lg-4 col-sm-12 storage-option">
-               <p class="storage-amount">
-                 <span class="dollar-sign-storage">$</span>
-                 <span class="cost-storage">0.50 CAD/GB</span>
-                 <span class="monthly-word"> Monthly</span>
-               </p>
-               <p class="IOPS-GB">5 IOPS/GB*</p>
-             </div>
+       <div class="col-lg-4 offset-lg-1 col-sm-12">
+         <h6>OBJECT STORAGE — </h6>
+         <div class="row block-storage storage-3">
+           <div class="col-lg-12 col-sm-12 storage-option">
+             <p class="storage-amount">
+               <span class="dollar-sign-storage">$</span>
+               <span class="cost-storage">0.05 CAD/GB</span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
            </div>
-        </div>
-      </div>
+         </div>
+       </div>
+           <div class="col-lg-4 col-sm-12">
+             <h6>OBJECT STORAGE — 4 REPLICAS (across multiple regions)</h6>
+             <div class="row block-storage storage-3">
+           <div class="col-lg-12 col-sm-12 storage-option">
+             <p class="storage-amount">
+               <span class="dollar-sign-storage">$</span>
+               <span class="cost-storage">0.07 CAD/GB</span>
+               <span class="monthly-word"> Monthly</span>
+             </p>
+           </div>
+         </div>
+       </div>
 
        <div class="col-lg-4 offset-lg-7 col-sm-12 additional-performance">
          <p>*Minimum guaranteed IOPS. Additional performance tiers available,
