--- a/themes/cca-general/assets/less/pages/home.less
+++ b/themes/cca-general/assets/less/pages/home.less
@@ -4,11 +4,12 @@
     background-color: @global-absolute-white;
     text-align: center;
     color: @global-official-red;
-    padding: 0 0 100px 0;
     position: relative;
 
     h3 {
-      padding-bottom: 80px;
+      padding: 60px 0 20px 0;
+      font-size: 40px;
+      padding-bottom: 40px;
 
       @media screen and (max-width : 768px) {
         font-size: 30px;
