--- a/themes/cca-general/layouts/partials/footer/footer.html
+++ b/themes/cca-general/layouts/partials/footer/footer.html
@@ -22,7 +22,7 @@
         <div class="social-icons">
           <div class="row">
             <div class="col-1">
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-facebook"></i>
             </div>
             <div class="col-1">
               <i class="fab fa-twitter"></i>
