--- a/themes/cca-general/layouts/partials/header/intro-home.html
+++ b/themes/cca-general/layouts/partials/header/intro-home.html
@@ -10,7 +10,7 @@
     <div class="row different">
       <div class="col-sm-12">
         <h3>
-          Cloud.ca is not a hyperscale cloud.<br />
+          cloud.ca is not a hyperscale cloud.<br />
           Here is how we are different:
         </h3>
 
