--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -1,6 +1,6 @@
 <div class="services-card pricing">
   <div class="row">
-    <div class="col-lg-6 offset-lg-3 col-sm-12 networking">
+    <div class="col-lg-5 offset-lg-1 col-sm-12 networking">
       <h3>Networking</h3>
 
       <table class="table table-striped">
@@ -50,7 +50,7 @@
 
     </div>
 
-    <div class="col-lg-6 offset-lg-3 col-sm-12 licenses-term-discounts">
+    <div class="col-lg-4 offset-lg-1 col-sm-12 licenses-term-discounts">
       <div class="row">
         <div class="col-lg-12 col-sm-12">
           <h3> Licenses</h3>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-3 col-sm-11 offset-sm-1 license-mobility">
+        <div class="col-lg-11 offset-lg-1 col-sm-11 offset-sm-1 license-mobility">
           <p>*Microsoft clients who meet the criteria are eligible for License Mobility through Microsoft Software Assurance.</p>
         </div>
       </div>
@@ -72,14 +72,14 @@
     </div>
   </div>
 
-  <div class="col-lg-12 col-sm-12 contact-form">
+  <div class="col-lg-6 offset-lg-1 col-sm-12 contact-form">
     <h5> Call us at 1-888-796-8364 to speak to a specialist today or fill out the form below: </h5>
   </div>
 
   <div class="container-fluid contact-form">
     <form>
       <div class="row">
-        <div class="col-lg-3 offset-lg-3 col-sm-12 small-box-col-1">
+        <div class="col-lg-3 offset-lg-1 col-sm-12 small-box-col-1">
           <div class="form-group">
             <input type="text" class="form-control form-control-lg" id="Form-First-Name" placeholder="First name">
           </div>
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 offset-lg-3 col-sm-12 small-box-col-1">
+        <div class="col-lg-3 offset-lg-1 col-sm-12 small-box-col-1">
           <div class="form-group">
             <input type="text" class="form-control form-control-lg" id="Form-Company-Name" placeholder="Company Name">
           </div>
@@ -110,26 +110,31 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-3 col-sm-12">
+        <div class="col-lg-6 offset-lg-1 col-sm-12">
           <div class="form-group">
             <input type="tel" class="form-control form-control-lg" id="Form-Phone-Number" placeholder="Phone Number">
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-3 col-sm-12">
+        <div class="col-lg-6 offset-lg-1 col-sm-12">
           <div class="form-group">
             <input type="email" class="form-control form-control-lg" id="Form-Email" placeholder="E-mail">
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-3 col-sm-12">
+        <div class="col-lg-6 offset-lg-1 col-sm-12">
           <div class="form-group">
             <textarea class="form-control form-control-lg" id="Form-Requirements" rows="3" placeholder="What are your requirements or specific questions?"></textarea>
           </div>
         </div>
       </div>
     </form>
+    <div class="col-lg-6 offset-lg-1 col-sm-12">
+      <a class="btn special-offers-services" href="#" role="button">
+        Submit
+      </a>
+    </div>
   </div>
 </div>
