--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -769,12 +769,12 @@
       }
       .special-offers-services {
         background-color: #fff;
-        padding: 10px 15px;
+        padding: 10px 30px;
         margin: 7px 7px;
       }
       a.btn.special-offers-services {
         font-size: 13px;
-        color: #f16529;
+        color: @global-official-blue;
         text-decoration: none;
         text-transform: uppercase;
       }
