submit button on right

--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -770,13 +770,16 @@
       .special-offers-services {
         background-color: #fff;
         padding: 10px 30px;
-        margin: 7px 7px;
+        margin: 20px 0;
       }
       a.btn.special-offers-services {
         font-size: 13px;
         color: @global-official-blue;
         text-decoration: none;
         text-transform: uppercase;
+      }
+      .submit-button {
+        text-align: right;
       }
     }
 
