--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -131,7 +131,7 @@
         </div>
       </div>
     </form>
-    <div class="col-lg-6 offset-lg-1 col-sm-12">
+    <div class="col-lg-6 offset-lg-1 col-sm-12 submit-button">
       <a class="btn special-offers-services" href="#" role="button">
         Submit
       </a>
