--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -777,6 +777,11 @@
         color: @global-official-blue;
         text-decoration: none;
         text-transform: uppercase;
+
+        &:hover {
+          text-decoration: none;
+          font-weight: bold;
+        }
       }
       .submit-button {
         text-align: right;
