--- a/themes/cca-general/assets/less/layout/footer.less
+++ b/themes/cca-general/assets/less/layout/footer.less
@@ -18,6 +18,12 @@
     font-size: 12px;
     font-weight: normal;
     line-height: 1.5em;
+
+    &:hover {
+      text-decoration: none;
+      font-weight: bold;
+      background-color: transparent;
+    }
   }
 
   p {
