--- a/themes/cca-general/assets/less/layout/navbar.less
+++ b/themes/cca-general/assets/less/layout/navbar.less
@@ -33,7 +33,8 @@ body > .wrapper > .navbar {
     white-space: normal;
 
     &:hover {
-      text-decoration: underline;
+      text-decoration: none;
+      font-weight: bold;
       background-color: transparent;
     }
   }
@@ -91,6 +92,12 @@ body > .wrapper > .navbar {
         font-weight: normal;
         text-transform: capitalize;
         padding-left: 0;
+
+        &:hover {
+          text-decoration: none;
+          font-weight: bold;
+          background-color: transparent;
+        }
       }
     }
 
