Storage tables redesigned

--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -232,7 +232,7 @@
       color: @global-official-dark-grey;
       text-transform: uppercase;
       font-size: 15px;
-      margin: 20px 70px 0 20px;
+      margin: 20px 0 0 20px;
       height:40px;
     }
     .block-storage {
@@ -294,8 +294,8 @@
       display: none;
     }
 
-    .storage-3 {
-      margin-right: 23%;
+    .storage-4 {
+      margin-left: 33px;
     }
 
     .additional-performance {
@@ -507,7 +507,6 @@
       .storage-3 {
         border-top: 1px solid #fff;
         border-bottom: 1px solid #fff;
-        margin-right: 30px;
       }
       .dollar-sign-storage {
         font-size: 18px;
