--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -78,7 +78,7 @@
          <h3>Storage</h3>
        </div>
 
-       <div class="col-lg-7 offset-lg-1 col-sm-12">
+       <div class="col-lg-10 offset-lg-1 col-sm-12">
          <h6>high performance block storage-highly available SSD</h6>
          <div class="row block-storage">
            <div class="col-lg-4 col-sm-12 storage-option">
@@ -108,7 +108,7 @@
          </div>
        </div>
 
-       <div class="col-lg-4 offset-lg-1 col-sm-12">
+       <div class="col-lg-3 offset-lg-1 col-sm-12">
          <h6>OBJECT STORAGE — </h6>
          <div class="row block-storage storage-3">
            <div class="col-lg-12 col-sm-12 storage-option">
@@ -120,7 +120,7 @@
            </div>
          </div>
        </div>
-           <div class="col-lg-4 col-sm-12">
+           <div class="col-lg-3 col-sm-12 storage-4">
              <h6>OBJECT STORAGE — 4 REPLICAS (across multiple regions)</h6>
              <div class="row block-storage storage-3">
            <div class="col-lg-12 col-sm-12 storage-option">
