--- a/themes/cca-general/assets/less/layout/navbar.less
+++ b/themes/cca-general/assets/less/layout/navbar.less
@@ -16,7 +16,7 @@ body > .wrapper > .navbar {
   }
 
   .logo-white {
-    margin-top: 5px;
+    width: 200px;
 
     @media screen and (max-width : 768px) {
       height: 35px;
