--- a/themes/cca-general/layouts/partials/footer/footer.html
+++ b/themes/cca-general/layouts/partials/footer/footer.html
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="logo">
-              <img class="img-fluid orange-logo" src="{{ "images/logored.png" | absURL }}">
+              <img class="img-fluid orange-logo" src="{{ "images/logored.svg" | absURL }}">
             </div>
 
             <div class="phone-number contact-info">
