--- a/themes/cca-general/layouts/partials/header/navbar.html
+++ b/themes/cca-general/layouts/partials/header/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-xl" role="navigation">
   <a class="navbar-brand" href="{{ print "/" | absLangURL }}">
-    <img class="logo-white" src="{{ "images/logowhite.png" | absURL }}" alt="cloud.ca">
+    <img class="logo-white" src="{{ "images/logowhite.svg" | absURL }}" alt="cloud.ca">
   </a>
 
   <div class="collapse navbar-collapse">
