oject storage padding bottom

--- a/themes/cca-general/assets/less/layout/footer.less
+++ b/themes/cca-general/assets/less/layout/footer.less
@@ -9,6 +9,11 @@
   padding-top: 100px;
   padding-bottom: 20px;
 
+  .orange-logo {
+    width: 130px;
+    margin-left: -12px;
+  }
+
   @media screen and (max-width : 768px) {
     padding: 40px 10px;
   }
