--- a/themes/cca-general/assets/less/pages/home.less
+++ b/themes/cca-general/assets/less/pages/home.less
@@ -90,6 +90,11 @@
       &:link {
         color: @global-official-white;
       }
+      &:hover {
+        text-decoration: none;
+        font-weight: bold;
+        background-color: transparent;
+      }
     }
 
     .cta-block {
