--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -275,10 +275,11 @@
 
     .storage-option {
       width: 100%;
-      height: 125px;
       line-height: 20px;
     }
-
+    .object-storage {
+      padding-bottom: 35px;
+    }
     .storage-option::after {
       content: ' ';
       background: @global-official-red;
