--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -111,7 +111,7 @@
        <div class="col-lg-3 offset-lg-1 col-sm-12">
          <h6>OBJECT STORAGE — </h6>
          <div class="row block-storage storage-3">
-           <div class="col-lg-12 col-sm-12 storage-option">
+           <div class="col-lg-12 col-sm-12 storage-option object-storage">
              <p class="storage-amount">
                <span class="dollar-sign-storage">$</span>
                <span class="cost-storage">0.05 CAD/GB</span>
@@ -123,7 +123,7 @@
            <div class="col-lg-3 col-sm-12 storage-4">
              <h6>OBJECT STORAGE — 4 REPLICAS (across multiple regions)</h6>
              <div class="row block-storage storage-3">
-           <div class="col-lg-12 col-sm-12 storage-option">
+           <div class="col-lg-12 col-sm-12 storage-option object-storage">
              <p class="storage-amount">
                <span class="dollar-sign-storage">$</span>
                <span class="cost-storage">0.07 CAD/GB</span>
