intro phrase changed

--- a/themes/cca-general/layouts/partials/header/intro-page.html
+++ b/themes/cca-general/layouts/partials/header/intro-page.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 col-sm-12">
         <h1> {{ .Title }} </h1>
-        <h2> cloud.ca is metered by the hour. Pay for what you use.</h2>
+        <h2> Metered by the hour. Pay for what you use.</h2>
       </div>
     </div>
   </div>
