--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -111,8 +111,8 @@
        <div class="col-lg-3 offset-lg-1 col-sm-12">
          <h6>OBJECT STORAGE — </h6>
          <div class="row block-storage storage-3">
-           <div class="col-lg-12 col-sm-12 storage-option object-storage">
-             <p class="storage-amount">
+           <div class="col-lg-12 col-sm-12 storage-option">
+             <p class="storage-amount object-storage">
                <span class="dollar-sign-storage">$</span>
                <span class="cost-storage">0.05 CAD/GB</span>
                <span class="monthly-word"> Monthly</span>
@@ -123,8 +123,8 @@
            <div class="col-lg-3 col-sm-12 storage-4">
              <h6>OBJECT STORAGE — 4 REPLICAS (across multiple regions)</h6>
              <div class="row block-storage storage-3">
-           <div class="col-lg-12 col-sm-12 storage-option object-storage">
-             <p class="storage-amount">
+           <div class="col-lg-12 col-sm-12 storage-option">
+             <p class="storage-amount object-storage">
                <span class="dollar-sign-storage">$</span>
                <span class="cost-storage">0.07 CAD/GB</span>
                <span class="monthly-word"> Monthly</span>
