--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -318,6 +318,10 @@
       margin-left: 10px;
     }
 
+    .storage .storage-4 {
+      margin-left: 0;
+    }
+
     .storage .block-storage {
         border-right: 0 solid @global-official-red;
         border-top: 0 solid @global-official-red;
