--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -79,7 +79,7 @@
        </div>
 
        <div class="col-lg-10 offset-lg-1 col-sm-12">
-         <h6>high performance block storage-highly available SSD</h6>
+         <h6>high performance block storage with QoS - highly available SSD</h6>
          <div class="row block-storage">
            <div class="col-lg-4 col-sm-12 storage-option">
              <p class="storage-amount">
@@ -87,7 +87,7 @@
                <span class="cost-storage">0.25 CAD/GB</span>
                <span class="monthly-word"> Monthly</span>
              </p>
-             <p class="IOPS-GB">1 IOPS/GB*</p>
+             <p class="IOPS-GB">1000 IOPS*</p>
            </div>
            <div class="col-lg-4 col-sm-12 storage-option">
              <p class="storage-amount">
@@ -95,7 +95,7 @@
                <span class="cost-storage">0.50 CAD/GB</span>
                <span class="monthly-word"> Monthly</span>
              </p>
-             <p class="IOPS-GB">5 IOPS/GB*</p>
+             <p class="IOPS-GB">5000 IOPS*</p>
            </div>
            <div class="col-lg-4 col-sm-12 storage-option">
              <p class="storage-amount">
@@ -103,35 +103,49 @@
                <span class="cost-storage">0.75 CAD/GB</span>
                <span class="monthly-word"> Monthly</span>
              </p>
-             <p class="IOPS-GB">10 IOPS/GB*</p>
+             <p class="IOPS-GB">10000 IOPS*</p>
            </div>
          </div>
        </div>
 
        <div class="col-lg-3 offset-lg-1 col-sm-12">
-         <h6>OBJECT STORAGE — </h6>
+         <h6>PERFORMANCE BLOCK STORAGE - HYBRID SSD</h6>
          <div class="row block-storage storage-3">
            <div class="col-lg-12 col-sm-12 storage-option">
              <p class="storage-amount object-storage">
                <span class="dollar-sign-storage">$</span>
-               <span class="cost-storage">0.05 CAD/GB</span>
+               <span class="cost-storage">0.12 CAD/GB</span>
                <span class="monthly-word"> Monthly</span>
              </p>
            </div>
          </div>
        </div>
-           <div class="col-lg-3 col-sm-12 storage-4">
-             <h6>OBJECT STORAGE — 4 REPLICAS (across multiple regions)</h6>
-             <div class="row block-storage storage-3">
-           <div class="col-lg-12 col-sm-12 storage-option">
-             <p class="storage-amount object-storage">
-               <span class="dollar-sign-storage">$</span>
-               <span class="cost-storage">0.07 CAD/GB</span>
-               <span class="monthly-word"> Monthly</span>
-             </p>
-           </div>
-         </div>
-       </div>
+
+          <div class="col-lg-3 col-sm-12 storage-4">
+          <h6>OBJECT STORAGE —</h6>
+            <div class="row block-storage storage-3">
+              <div class="col-lg-12 col-sm-12 storage-option">
+                <p class="storage-amount object-storage">
+                  <span class="dollar-sign-storage">$</span>
+                  <span class="cost-storage">0.05 CAD/GB</span>
+                  <span class="monthly-word"> Monthly</span>
+                </p>
+              </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-12 storage-4">
+            <h6>OBJECT STORAGE — 4 REPLICAS (across multiple regions)</h6>
+              <div class="row block-storage storage-3">
+                <div class="col-lg-12 col-sm-12 storage-option">
+                  <p class="storage-amount object-storage">
+                    <span class="dollar-sign-storage">$</span>
+                    <span class="cost-storage">0.07 CAD/GB</span>
+                    <span class="monthly-word"> Monthly</span>
+                  </p>
+                </div>
+              </div>
+          </div>
 
        <div class="col-lg-4 offset-lg-7 col-sm-12 additional-performance">
          <p>*Minimum guaranteed IOPS. Additional performance tiers available,
