Single region / multi region update

--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -122,7 +122,7 @@
        </div>
 
           <div class="col-lg-3 col-sm-12 storage-4">
-          <h6>OBJECT STORAGE —</h6>
+          <h6>OBJECT STORAGE — Single Region</h6>
             <div class="row block-storage storage-3">
               <div class="col-lg-12 col-sm-12 storage-option">
                 <p class="storage-amount object-storage">
@@ -135,7 +135,7 @@
         </div>
 
         <div class="col-lg-3 col-sm-12 storage-4">
-            <h6>OBJECT STORAGE — 4 REPLICAS (across multiple regions)</h6>
+            <h6>OBJECT STORAGE — Multi-region</h6>
               <div class="row block-storage storage-3">
                 <div class="col-lg-12 col-sm-12 storage-option">
                   <p class="storage-amount object-storage">
