half changes for new version

--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -571,6 +571,8 @@
         margin-top: 20px;
         padding: 0;
       }
+
+
     }
 
 
@@ -634,12 +636,15 @@
     }
 
     /* NETWORKING */
+
+    .pricing .networking h3 {
+      padding-top: 2000px;
+    }
     .networking {
       h3 {
-        padding-bottom: 30px;
+        padding-top: 30px;
       }
       .table td {
-        border-top: none;
         padding: 18px;
         color: #fff;
         font-size: 18px;
@@ -788,7 +793,7 @@
         }
       }
       .submit-button {
-        text-align: right;
+        text-align: center;
       }
     }
 
