--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -152,5 +152,81 @@
            <a href="#">contact us</a> for details.</p>
        </div>
      </div>
+     <div class="row">
+      <div class="col-lg-5 offset-lg-1 col-sm-12 networking">
+        <h3>Networking</h3>
+  
+        <table class="table table-striped">
+          <tbody>
+            <tr>
+              <td>PUBLIC IPS</td>
+              <td>$5.00 CAD Monthly</td>
+            </tr>
+            <tr>
+              <td>INTERNAL DATA TRANSFER</td>
+              <td>Included</td>
+            </tr>
+            <tr>
+              <td>INBOUND DATA TRANSFER</td>
+              <td>Included</td>
+            </tr>
+            <tr>
+              <td>OUTBOUND DATA TRANSFER</td>
+              <td>$0.10 CAD/GB</td>
+            </tr>
+            <tr>
+              <td>INTER-REGION DATA TRANSFER</td>
+              <td>$0.02 CAD/GB</td>
+            </tr>
+            <tr>
+              <td>DIRECT CONNECT DATA TRANSFER</td>
+              <td>$0.02 CAD/GB</td>
+            </tr>
+            <tr>
+              <td>MULTI-TIER VPC</td>
+              <td>Included</td>
+            </tr>
+            <tr>
+              <td>LOAD BALANCING (BASIC)</td>
+              <td>Included</td>
+            </tr>
+            <tr>
+              <td>LOAD BALANCING (ENTERPRISE)</td>
+              <td>Contact us for details</td>
+            </tr>
+            <tr>
+              <td>FIREWALL (ENTERPRISE)</td>
+              <td>Contact us for details</td>
+            </tr>
+          </tbody>
+        </table>
+  
+      </div>
+  
+      <div class="col-lg-4 offset-lg-1 col-sm-12 licenses-term-discounts">
+        <div class="row">
+          <div class="col-lg-12 col-sm-12">
+            <h3> Licenses</h3>
+            <p>– Bring your own OS* and software licenses.</p>
+            <p>– Certain licences available through Microsoft SPLA partner program.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-11 offset-lg-1 col-sm-11 offset-sm-1 license-mobility">
+            <p>*Microsoft clients who meet the criteria are eligible for License Mobility through Microsoft Software Assurance.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 col-sm-12">
+            <h3> Term discounts</h3>
+            <p>10-30% discount on committed compute capacity for 1, 2, or 3 year term. Contact us for details.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
   </div>
 </div>
