Licenses-term-discount styled

--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -62,7 +62,7 @@
 
     /* CONTENT-CARD*/
   .content-card {
-    padding: 120px 0;
+    padding: 100px 0;
 
     h1 {
       text-transform: uppercase;
@@ -78,6 +78,7 @@
 
     h3 {
       color: @global-official-red;
+      padding-top: 30px;
     }
 
     p {
@@ -379,6 +380,35 @@
 
   }
 
+     /* LICENSES */
+     .licenses-term-discounts {
+      h3 {
+        padding-bottom: 10px;
+      }
+      p {
+        padding-left: 15px;
+        font-size: 18px;
+      }
+      .license-mobility p {
+        font-size: 12px;
+        text-align: right;
+      }
+      .buttons-row {
+        padding-left: 8px;
+      }
+      .special-offers-services {
+        background-color: #fff;
+        padding: 10px 15px;
+        margin: 7px 7px;
+      }
+      a.btn.special-offers-services {
+        font-size: 13px;
+        color: #f16529;
+        text-decoration: none;
+        text-transform: uppercase;
+      }
+    }
+
   .services-card {
     /* For browsers that do not support gradients */
     background: @global-official-red;
@@ -644,6 +674,7 @@
       h3 {
         padding-top: 30px;
       }
+
       .table td {
         padding: 18px;
         color: #fff;
@@ -652,6 +683,7 @@
       .table-striped tbody tr:nth-of-type(2n+1) {
         background-color: rgba(249, 249, 249, 0.1);
       }
+
     }
 
     /* MOBILE NETWORKING */
@@ -661,34 +693,6 @@
         }
     }
 
-    /* LICENSES */
-    .licenses-term-discounts {
-      h3 {
-        padding-bottom: 10px;
-      }
-      p {
-        padding-left: 15px;
-        font-size: 18px;
-      }
-      .license-mobility p {
-        font-size: 12px;
-        text-align: right;
-      }
-      .buttons-row {
-        padding-left: 8px;
-      }
-      .special-offers-services {
-        background-color: #fff;
-        padding: 10px 15px;
-        margin: 7px 7px;
-      }
-      a.btn.special-offers-services {
-        font-size: 13px;
-        color: #f16529;
-        text-decoration: none;
-        text-transform: uppercase;
-      }
-    }
 
     /* MOBILE LICENSES*/
     @media screen and (max-width : 992px) {
